# fortytwotasks

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements.txt  tasks.py
frontend/: vite.config.js
scripts/: setup.sh
settings/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
